# pymaeparser

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yaml
src/: pymaeparser_ext.cpp
src/pymaeparser/: __init__.py
tests/: test_pymaeparser.py
tests/data/: benzoate.mae
